# diploma-thesis

./: .gitignore  README.md  readme.MD
PedestrianDetection/: PedestrianDetection.pro  convexhull.cpp  convexhull.h  croppedimage.h  hog.cpp  hog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediafile.cpp  mediafile.h  mog.cpp  mog.h  pipeline.cpp  pipeline.h  settings.h  trainhog.cpp  trainhog.h  videostream.cpp  videostream.h
build-PedestrianDetection-ARM-Debug/: Makefile
document/: DP.tex  pdfa.xmpi
document/figures/: roc1.eps  roc2.eps  svm_plot.tex
document/includes/: 1_intro.tex  2_main_problems.tex  3_approaches.tex  4_datasets.tex  5_1_used_libs.tex  5_2_opencv.tex  5_3_dlib.tex  5_o_aplikaci.tex  6_o_aplikaci.tex  6_testing_devices.tex  7_experiments.tex  7_testing_devices.tex  8_experiments.tex  8_zaver.tex  9_zaver.tex  _3_approaches.tex  _appendix.tex  _meta.tex  references.tex
pedestrian/: CMakeLists.txt  listNeg.txt  listPos.txt  main.cpp  pedestrian.sln  pedestrian.vcxproj  pedestrian.vcxproj.filters  settings.txt  stdafx.cpp  test.txt
pedestrian/3dparty/de/: DifferentialEvolution.h  TestFunctions.h
pedestrian/apps/: generator_roc_curve.py
pedestrian/data/classificators/cascades/: owncascade.xml
pedestrian/data/settings/: settings.txt  settings1.txt  settings2.txt  settings_1080.txt  settings_1080_def.txt  settings_640.txt  settings_640_def.txt  settings_720.txt  settings_720_def.txt  settings_avi.txt  settings_avi_def.txt  settings_img.txt  settings_mov.txt  settings_school.txt  settings_vga.txt
pedestrian/data/trained/: trainImg-txt_trained.txt  video-cctv2_640-mp4_trained.txt  video-cctv4-avi_trained.txt  video-cctv4-mov_trained.txt  video-cctv4-mp4_trained.txt  video-cctv4_1080-mp4_trained.txt  video-cctv4_640-mp4_trained.txt  video-cctv4_720-mp4_trained.txt  video-school-avi_trained.txt
pedestrian/samples/: listNeg.txt  listNegMin.txt  listNegTestMin.txt  listPosGridIlid.txt  listPosMin.txt  listPosPridMit.txt  listPosTestMin.txt  listPosViper.txt  negSamples.txt  negSamplesCustom.txt  posSamples.txt  silhouettesPos.txt  silhouettesPosCascade.txt  sudipDas.txt
pedestrian/samples/negative/: neg12000.txt  neg15000.txt  neg3000.txt  neg30000.txt  neg3000b.txt  neg3000c.txt  neg6000.txt  neg9000.txt  negDam12000.txt  negDam3000.txt  negDam6000.txt  negDam9000.txt
pedestrian/samples/posSeparately/: listPos3DPES_CAVIAR4REID.txt  listPosTownCenterSarc3d.txt
pedestrian/samples/positive/: pos12000.txt  pos15000.txt  pos3000.txt  pos6000.txt  pos9000.txt
pedestrian/source/: pipeline.cpp  pipeline.h  settings.h  testingPipeline.cpp  testingPipeline.h
pedestrian/source/alg/: cascadeClass.cpp  cascadeClass.h  convexhull.cpp  convexhull.h  fhog.cpp  fhog.h  hog.cpp  hog.h  mog.cpp  mog.h  myFhog.cpp  myFhog.h  ownHog.cpp  ownHog.h
pedestrian/source/media/: croppedimage.h  mediafile.cpp  mediafile.h  videostream.cpp  videostream.h
pedestrian/source/test/: diffEvoTest.cpp  diffEvoTest.h  dlibSvmTest.cpp  dlibSvmTest.h  svmTest.cpp  svmTest.h  testClass.cpp  testClass.h
pedestrian/source/train/: combinedTrainHog.cpp  combinedTrainHog.h  trainCascade.cpp  trainCascade.h  trainfhog.cpp  trainfhog.h  trainhog.cpp  trainhog.h
pedestrian/source/utils/: extractorROI.cpp  extractorROI.h  utils.h
pedestrian/testing/: testing.txt
